--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,11 +1,69 @@
 * {
   margin: 0;
   padding: 0;
-    font-family: sans-serif;
-    box-sizing: border-box;
+  font-family: sans-serif;
+  box-sizing: border-box;
+}
+
+body {
+
+}
+
+h2#cityName {
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 20px
+}
+.day {
+  border: 2px black;
+  background-color: purple;
+}
+
+#wrapper0 {
+  margin: auto;
+}
+
+#wrapper2 {
+  margin-top: 40px;
 }
 
 #submit {
-    width: 100px;
-  height: 50px;
+    width: 50px;
+  height: 25px;
 }
+
+#submit:hover {
+  box-shadow: 3px 2px 3px black;
+}
+
+
+
+.pad {
+  background-color: deepskyblue;
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.degrees {
+  font-weight: bold;
+  font-size: large;
+}
+
+.weather_info {
+  padding: 10px;
+  float: left;
+  width: 20%;
+}
+
+@media screen and (max-width: 1050px) {
+  .weather_info {
+    width: 50%;
+  }
+}
+
+@media screen and (max-width: 420px) {
+  .weather_info {
+    width: 100%;
+  }
+}
+
