--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,12 @@
+@import url("https://fonts.googleapis.com/css?family=Londrina+Solid&display=swap");
 * {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
   box-sizing: border-box; }
+
+body {
+  text-align: center; }
 
 h2#cityName {
   margin-left: auto;
@@ -11,25 +15,48 @@ h2#cityName {
 
 .day {
   border: 2px black;
-  background-color: purple; }
+  background-color: rgba(52, 46, 208, 0.63);
+  border-radius: 10%;
+  box-shadow: 2px 4px 4px white;
+  padding: 10px; }
+  .day h4 {
+    font-family: "Lodrina Solid", cursive;
+    letter-spacing: 2px;
+    color: white;
+    text-shadow: -1px -1px 0px blue, 3px 3px 0px blue, 6px 6px 0px darkblue; }
 
 #wrapper0 {
   margin: auto; }
+  #wrapper0 h1 {
+    font-family: 'Lodrina Solid', cursive;
+    letter-spacing: 5px;
+    color: white;
+    text-shadow: -1px -1px 0px blue, 3px 3px 0px blue, 6px 6px 0px darkblue; }
+  #wrapper0 h6 {
+    letter-spacing: 2px;
+    font-size: 14px; }
 
 #wrapper2 {
-  margin-top: 40px; }
+  margin-top: 5px; }
 
 #submit {
   width: 50px;
-  height: 25px; }
+  height: 25px;
+  margin-bottom: 20px;
+  margin-top: 20px; }
 
 #submit:hover {
   box-shadow: 3px 2px 3px black; }
 
+#city {
+  margin: 10px; }
+
 .pad {
   background-color: deepskyblue;
   display: flex;
-  justify-content: space-evenly; }
+  justify-content: space-evenly;
+  padding-top: 20px;
+  padding-bottom: 20px; }
 
 .degrees {
   font-weight: bold;
@@ -38,12 +65,19 @@ h2#cityName {
 .weather_info {
   padding: 10px;
   float: left;
-  width: 20%; }
+  width: 20%;
+  text-align: center; }
 
-@media screen and (max-width: 1050px) {
+@media screen and (max-width: 920px) {
+  h1 {
+    font-size: 40px; }
+
   .weather_info {
     width: 50%; } }
-@media screen and (max-width: 420px) {
+@media screen and (max-width: 470px) {
+  h1 {
+    font-size: 30px; }
+
   .weather_info {
     width: 100%; } }
 
