--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,25 +5,37 @@
   font-family: sans-serif;
   box-sizing: border-box; }
 
+#target {
+  background-color: transparent;
+  perspective: 1000px; }
+
 body {
   text-align: center; }
 
 h2#cityName {
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 20px; }
+  margin-bottom: 20px;
+  font-family: 'Lodrina Solid', cursive;
+  font-weight: bold;
+  font-size: 30px; }
 
 .day {
   border: 2px black;
   background-color: rgba(52, 46, 208, 0.63);
   border-radius: 10%;
   box-shadow: 2px 4px 4px white;
-  padding: 10px; }
+  padding: 10px;
+  transition: transform 0.6s;
+  transform-style: preserve-3d; }
   .day h4 {
     font-family: "Lodrina Solid", cursive;
     letter-spacing: 2px;
     color: white;
     text-shadow: -1px -1px 0px blue, 3px 3px 0px blue, 6px 6px 0px darkblue; }
+
+.day:hover {
+  transform: rotateY(360deg); }
 
 #wrapper0 {
   margin: auto; }
