--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -11,6 +11,7 @@ $color-skyblue: deepskyblue;
   6px 6px 0px $color-darkblue;
 }
 
+
 * {
   margin: 0;
   padding: 0;
@@ -18,6 +19,10 @@ $color-skyblue: deepskyblue;
   box-sizing: border-box;
 }
 
+#target {
+  background-color: transparent;
+  perspective: 1000px;
+}
 
 body {
  text-align: center;
@@ -28,6 +33,9 @@ h2#cityName {
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 20px;
+  font-family: 'Lodrina Solid', cursive;
+  font-weight: bold;
+  font-size: 30px;
 }
 .day {
   border: 2px black;
@@ -35,12 +43,21 @@ h2#cityName {
   border-radius: 10%;
   box-shadow: 2px 4px 4px white;
   padding: 10px;
+
+  transition: transform 0.6s;
+  transform-style: preserve-3d;
+
   h4 {
     font-family: "Lodrina Solid", cursive;
     letter-spacing: 2px;
     @include textShadow;
   }
 }
+
+.day:hover {
+  transform: rotateY(360deg);
+}
+
 
 #wrapper0 {
   margin: auto;
@@ -55,8 +72,6 @@ h2#cityName {
   }
 
 }
-
-
 
 #wrapper2 {
   margin-top: 5px;
