--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,9 @@
 @import url("https://fonts.googleapis.com/css?family=Londrina+Solid&display=swap");
+@keyframes fontbulger {
+  0%, 100% {
+    font-size: 10px; }
+  50% {
+    font-size: 12px; } }
 * {
   margin: 0;
   padding: 0;
@@ -26,6 +31,7 @@ h2#cityName {
   border-radius: 10%;
   box-shadow: 2px 4px 4px white;
   padding: 10px;
+  animation: fontbulger 2s infinite;
   transition: transform 0.6s;
   transform-style: preserve-3d; }
   .day h4 {
