--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -11,6 +11,14 @@ $color-skyblue: deepskyblue;
   6px 6px 0px $color-darkblue;
 }
 
+@keyframes fontbulger {
+  0%, 100% {
+    font-size: 10px;
+  }
+  50% {
+    font-size: 12px;
+  }
+}
 
 * {
   margin: 0;
@@ -44,6 +52,7 @@ h2#cityName {
   box-shadow: 2px 4px 4px white;
   padding: 10px;
 
+  animation: fontbulger 2s infinite;
   transition: transform 0.6s;
   transform-style: preserve-3d;
 
