--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,9 @@
 @import url("https://fonts.googleapis.com/css?family=Londrina+Solid&display=swap");
-@keyframes fontbulger {
-  0%, 100% {
-    font-size: 10px; }
+@keyframes Test {
+  0%, 25% {
+    font-size: 0.5em; }
+  25%, 30% {
+    font-size: 1em; }
   50% {
     font-size: 12px; } }
 * {
@@ -31,7 +33,7 @@ h2#cityName {
   border-radius: 10%;
   box-shadow: 2px 4px 4px white;
   padding: 10px;
-  animation: fontbulger 2s infinite;
+  animation: Test 1s ease-out;
   transition: transform 0.6s;
   transform-style: preserve-3d; }
   .day h4 {
@@ -40,7 +42,8 @@ h2#cityName {
     color: white;
     text-shadow: -1px -1px 0px blue, 3px 3px 0px blue, 6px 6px 0px darkblue; }
 
-.day:hover {
+.day:active {
+  animation: Test 1s ease-in-out;
   transform: rotateY(360deg); }
 
 #wrapper0 {
@@ -73,8 +76,8 @@ h2#cityName {
   background-color: deepskyblue;
   display: flex;
   justify-content: space-evenly;
-  padding-top: 20px;
-  padding-bottom: 20px; }
+  padding-top: 100px;
+  padding-bottom: 100px; }
 
 .degrees {
   font-weight: bold;
@@ -97,6 +100,22 @@ h2#cityName {
     font-size: 30px; }
 
   .weather_info {
-    width: 100%; } }
+    width: 100%;
+    margin-right: auto;
+    margin-left: auto;
+    margin-bottom: 5px; }
+
+  #target {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    flex-direction: column; }
+    #target h4 {
+      font-size: 40px; }
+    #target p {
+      margin-top: 5px;
+      margin-bottom: 5px; }
+    #target .degrees {
+      margin-bottom: 10px; } }
 
 /*# sourceMappingURL=style.css.map */
