--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -11,9 +11,12 @@ $color-skyblue: deepskyblue;
   6px 6px 0px $color-darkblue;
 }
 
-@keyframes fontbulger {
-  0%, 100% {
-    font-size: 10px;
+@keyframes Test {
+  0%, 25% {
+    font-size: 0.5em;
+  }
+  25%, 30% {
+    font-size: 1em;
   }
   50% {
     font-size: 12px;
@@ -51,8 +54,7 @@ h2#cityName {
   border-radius: 10%;
   box-shadow: 2px 4px 4px white;
   padding: 10px;
-
-  animation: fontbulger 2s infinite;
+  animation: Test 1s ease-out;
   transition: transform 0.6s;
   transform-style: preserve-3d;
 
@@ -63,7 +65,8 @@ h2#cityName {
   }
 }
 
-.day:hover {
+.day:active {
+  animation: Test 1s ease-in-out;
   transform: rotateY(360deg);
 }
 
@@ -106,8 +109,8 @@ h2#cityName {
   background-color: $color-skyblue;
   display: flex;
   justify-content: space-evenly;
-  padding-top: 20px;
-  padding-bottom: 20px;
+  padding-top: 100px;
+  padding-bottom: 100px;
 }
 
 .degrees {
@@ -140,6 +143,28 @@ h2#cityName {
   }
   .weather_info {
     width: 100%;
+    margin-right: auto;
+    margin-left: auto;
+    margin-bottom: 5px;
   }
+
+  #target {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    flex-direction: column;
+    h4 {
+      font-size: 40px;
+    }
+    p {
+      margin-top: 5px;
+      margin-bottom: 5px;
+    }
+    .degrees {
+       margin-bottom: 10px;
+    }
+
+  }
+
 }
 
